--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-.header_button{
+/* 게시판 CSS 시작 */
+.tabs {
     background-color: rgb(56, 56, 56);
     color: white;
     font-size: 1em;
@@ -6,56 +7,70 @@
     border: 0;
     margin-right: 10px;
 }
-#menubar{
+
+#menubar {
     width: auto;
     height: 45px;
     background-color: rgb(56, 56, 56);
     padding: 10px;
-}        
-table{
+}
+
+table {
     margin-top: 6px;
     width: 100%;
 }
-table th{
+
+table th {
     background-color: rgb(78, 78, 78);
     margin: 0 10px;
     color: white;
 }
-input{
+
+tr {
+    text-align: center;
+}
+
+input {
     width: 250px;
     height: 25px;
 }
-img{
+
+img {
     width: 20px;
     height: 20px;
 }
+/* 게시판 CSS 끝 */
 
 
-
-/* 입력창 css */
+/* 입력창 css 시작*/
 .write_hrs {
     width: 500px;
 }
+
 .write_write_con {
     width: 500px;
 }
-#write-icon-span{           
+
+#write-icon-span {
     position: relative;
     left: 115px;
 }
-#write-head-span{         
+
+#write-head-span {
     position: relative;
     left: 135px;
     font-weight: bold;
 }
-.write_middle_input{
+
+.write_middle_input {
     width: 300px;
     height: 17px;
     position: relative;
     left: 120px;
     resize: none;
 }
-#write-content-input{
+
+#write-content-input {
     width: 300px;
     height: 200px;
     position: relative;
@@ -63,22 +78,27 @@ img{
     vertical-align: top;
     resize: none;
 }
-.write_middle_span{
+
+.write_middle_span {
     position: relative;
     vertical-align: top;
     left: 100px;
 }
-#write-image-select{            
+
+#write-image-select {
     position: relative;
     left: 120px;
 }
-#write-regist-button{           
+
+#write-regist-button {
     position: relative;
     left: 170px;
     background-color: skyblue
 }
-#write-list-button{           
+
+#write-list-button {
     position: relative;
     left: 180px;
     background-color: orange;
 }
+/* 작성글 CSS 끝 */
