--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,67 @@
 /* 게시판 CSS 시작 */
-.tabs {
+
+body{
+    font-family: 'Varela Round', sans-serif;
+}
+/* header*/
+#header{
+    width: auto;
+    height: 250px;
+    margin-bottom: 10px;
+    overflow: hidden;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.header_img{
+    width: auto;
+    height: 200px;
+}
+.container{
+    display: flex;
+    flex-direction: column;
+}
+/* aside */
+#aside{
+    width: 14%;
+    margin-right: 1%;
+    height: 510px;
+    overflow: hidden;
+    /* background-color: aqua; */
+}
+.aside_img{
+    width: auto;
+    height: 510px;
+}
+.container2{
+    width: 100%;
+    display: flex;
+    margin-bottom: 10px;
+}
+/* footer */
+#footer{
+    width: auto;
+    height: 100px;
+    background-color: rgb(83, 83, 83);
+    overflow: hidden;
+}
+.text{
+    text-align: center;
+    color: white;
+}
+/* nav메뉴 */
+.nav_img{
+    width: 20px;
+    height: 20px;
+}
+#menubar{
+    width: auto;
+    height: 45px;
+    background-color: rgb(56, 56, 56);
+    padding: 10px;
+}
+.tabs{
     background-color: rgb(56, 56, 56);
     color: white;
     font-size: 1em;
@@ -7,37 +69,47 @@
     border: 0;
     margin-right: 10px;
 }
-
-#menubar {
+/* 게시글 section */
+#whole{
+    width: 85%;
+}
+#post-section{
     width: auto;
-    height: 45px;
-    background-color: rgb(56, 56, 56);
+    margin-top: 10px;
     padding: 10px;
+    border: 1px solid black;
+    border-radius: 10px;
 }
-
-table {
-    margin-top: 6px;
-    width: 100%;
+#post-img{
+    width: 20px;
+    height: 20px;
 }
-
-table th {
-    background-color: rgb(78, 78, 78);
-    margin: 0 10px;
-    color: white;
-}
-
-tr {
-    text-align: center;
-}
-
-input {
+#post-searchinput{
     width: 250px;
     height: 25px;
 }
-
-img {
-    width: 20px;
-    height: 20px;
+#post-table{
+    margin-top: 6px;
+    width: 100%;
+    border-collapse: collapse
+}
+#post-th{
+    background-color: rgb(100, 99, 99);
+    margin: 0 10px;
+    color: white;
+    border-right: 2px solid white;
+}
+#post-tr1:hover{
+    background-color: rgb(223, 222, 222);
+}
+#post-btnwrite{
+    margin-top: 30px;
+    width: 100px;
+    height: 30px;
+    background-color: rgb(152, 152, 219);
+    border: 0px;
+    border-radius: 5px;
+    color: white;
 }
 /* 게시판 CSS 끝 */
 
