--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,15 @@ body{
     display: flex;
     margin-bottom: 10px;
 }
+#post-btnwrite{
+    margin-top: 15px;
+    width: 100px;
+    height: 30px;
+    background-color: rgb(152, 152, 219);
+    border: 0px;
+    border-radius: 5px;
+    color: white;
+}
 /* footer */
 #footer{
     width: auto;
