--- a/css/style.css
+++ b/css/style.css
@@ -187,3 +187,96 @@ body{
     background-color: rgb(230, 230, 230);
     height: 30px;
 }
+/* 게시글수정 */
+/* 전체배경div */
+#div-bg{
+    margin-top: 10px;
+    width: auto;
+    height: 800px;
+    background-color: #fff;
+}
+ /* 클릭후 배경div */
+ .div_op0{
+        border: 1px solid #000;
+        width: 100%;
+        height: 530px;
+        border-radius: 10px;
+    }
+/* 버튼  */
+
+.btn_list{
+    background-color: orange;
+    border: 0;
+    margin: 5px 5px 5px 15px;
+    color: white;
+    padding: 5px 15px 5px 15px;
+}
+.btn_co{
+    background-color: green;
+    border: 0;
+    margin: 5px;
+    color: white;
+    padding: 5px 15px 5px 15px;
+}
+.btn_del{
+     background-color: red;
+     border: 0;
+    margin: 5px;
+    color: white;
+    padding: 5px 15px 5px 15px;
+}
+.btn_before{
+    background-color: blueviolet;
+    border: 0;
+    margin: 5px;
+    color: white;
+    padding: 5px 15px 5px 15px;
+}
+.btn_after{
+    background-color: blueviolet;
+    border: 0;
+    margin: 5px;
+    color: white;
+    padding: 5px 15px 5px 15px;}
+/* 첨부파일 이미지 */
+.sp{
+    width: 50px;
+    height: 50px;
+    color: white;
+    display: block;
+    margin: 20px;
+    position: absolute;
+    
+}
+/* 버튼고정 */
+.div_op7{
+    height: 140px; 
+}
+
+/* div전체 밑줄 */
+.div_op:after {
+    content: "";
+    display: block;
+    border-bottom: 1px  dashed  #000;
+    }
+.div_op7:after {
+    content: "";
+    display: block;
+    border-bottom: 1px  dashed  #000;
+    height: 100px;
+    }
+    /* textarea */
+textarea{
+    display: block;
+    margin-left: 100px;
+    position: relative;
+    bottom: 12px;
+    
+    resize: none;
+}
+/* span */
+.span_op{
+    position: relative;
+    top: 15px;
+    margin-left: 5px;
+}
